--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+			<version>1.16.10</version> <!-- added -->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
