--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
+			<version>42.1.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
